<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="16dp">

    <!-- Ajoutez les éléments de votre interface utilisateur ici -->
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_odk_collect" />
    <!-- Nesting the RelativeLayout inside the LinearLayout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">

        <!--Edittext for getting users phone number-->
        <EditText
            android:id="@+id/idEdtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_your_phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minHeight="48dp" />

        <!--Button for getting OTP-->
        <Button
            android:id="@+id/idBtnGetOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idEdtPhoneNumber"
            android:layout_margin="10dp"
            android:text="@string/get_otp"
            android:textAllCaps="false" />

        <!--Edittext for getting otp from user-->
        <EditText
            android:id="@+id/idEdtOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idBtnGetOtp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_otp"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minHeight="48dp" />

        <!--button for verifying user OTP-->
        <Button
            android:id="@+id/idBtnVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idEdtOtp"
            android:layout_margin="10dp"
            android:text="@string/verify_otp"
            android:textAllCaps="false" />

    </RelativeLayout>

</LinearLayout>

