<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="701dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/usernam"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#000000" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/mot_de_pass"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#000000" />


        <Button
            android:id="@+id/login_button"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="10dp"
            android:text="@string/connect"
            android:textColor="@color/colorOnPrimary"
            android:textStyle="bold" />


    </LinearLayout>

    <ImageView
        android:layout_width="83dp"
        android:layout_height="83dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="575dp"
        android:baselineAligned="false"
        android:src="@drawable/orange_logo" />

</RelativeLayout>
